--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,15 +11,15 @@ nav:
   - Home: index.md
   - Blog:
       - blog/index.md
-#      - 2021:
-#          - blog/2021/core-web-vitals.md
-#          - blog/2021/cooking-post.md
+      - updates:
+          - blog/updates/add-teachers.md
 #      - Subtopic:
 #          - blog/subtopic/interesting-post.md
 theme:
   custom_dir: overrides
   name: material
-  font: false
+  font:
+    text: Noto Sans
   icon:
     logo: material/home
   # Light and Dark Theme Toggle
@@ -27,18 +27,21 @@ theme:
     - media: "(prefers-color-scheme: light)"
       scheme: default
       toggle:
-        icon: material/weather-night
+        icon: material/toggle-switch
         name: Switch to dark mode
     - media: "(prefers-color-scheme: dark)"
       scheme: slate
-      primary: red
-      accent: pink
+#      primary: red
+#      accent: pink
       toggle:
-        icon: material/weather-sunny
+        icon: material/toggle-switch-off-outline
         name: Switch to light mode
   features:
     - navigation.instant
     - navigation.indexes
+    - navigation.tabs
+    - toc.integrate
+    - header.autohide
 
 plugins:
   - search
@@ -63,14 +66,18 @@ markdown_extensions:
   - md_in_html
   - pymdownx.highlight
   - pymdownx.inlinehilite
-  - pymdownx.superfences
   - pymdownx.snippets
   - meta
   - def_list
   - admonition
   - pymdownx.details
-  - pymdownx.superfences
   - pymdownx.caret
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
+
   - pymdownx.emoji:
       emoji_index: !!python/name:materialx.emoji.twemoji
       emoji_generator: !!python/name:materialx.emoji.to_svg
