fix:add update page from 04.09

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ nav:
       - Обновления:
           - blog/updates/add-teachers.md
           - blog/updates/update-b2.md
+          - blog/updates/04-09-update.md
       - Поддержка:
           - blog/support/index.md
 theme:
@@ -45,7 +46,6 @@ theme:
     - navigation.tabs
     - toc.integrate
     - header.autohide
-    - announce.dismiss
 
 plugins:
   - search
